# autonomous-loop

./: .gitignore  AGENT_BUILD_GUIDE.md  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  TROUBLESHOOTING.md  pyproject.toml
.github/workflows/: test.yml
docs/: agent-implementation-brief.md  examples.md  install-repo-autodetect-plan.md  install.md  security.md
docs/plans/: 2026-03-11-first-time-user-onboarding-ezpz.md
skills/autonomous-loop/: SKILL.md
skills/autonomous-loop/agents/: openai.yaml
src/autonomous_loop/: __init__.py  bootstrap.py  cli.py  controller.py  gates.py  hashes.py  hooks.py  install_repo.py  locks.py  logging_utils.py  models.py  paths.py  storage.py  transcript.py
src/autonomous_loop/resources/templates/.agents/skills/autonomous-loop/: SKILL.md
src/autonomous_loop/resources/templates/.codex/: autoloop.project.json  hooks.json
templates/.agents/skills/autonomous-loop/: SKILL.md
tests/: support.py  test_autonomous_loop_contract.py  test_bootstrap.py  test_cleanup.py  test_doctor.py  test_install_repo.py  test_skill_contract.py  test_transcript.py
