[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "autonomous-loop"
version = "0.2.0"
description = "Stdlib-first autonomous loop controller runtime"
requires-python = ">=3.11"
dependencies = []
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "Trey Goff"},
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Quality Assurance",
  "Topic :: Software Development :: Testing",
]

[project.urls]
Homepage = "https://github.com/treygoff24/autonomous-loop"
Repository = "https://github.com/treygoff24/autonomous-loop"
Issues = "https://github.com/treygoff24/autonomous-loop/issues"
Changelog = "https://github.com/treygoff24/autonomous-loop/blob/main/CHANGELOG.md"

[project.scripts]
autonomous-loop = "autonomous_loop.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
autonomous_loop = [
  "resources/templates/.codex/hooks.json",
  "resources/templates/.agents/skills/autonomous-loop/SKILL.md",
  "resources/templates/.agents/skills/autonomous-loop/agents/openai.yaml",
]
